# solar

./: .dockerignore  .gitignore  Dockerfile  README.md  config.example.json  config.json  docker-compose.yml  pyproject.toml
app/: config.py  data_loader.py  health_guide.py  lark_bot.py  main.py  scheduler.py  schemas.py  solar_calculator.py
data/: health_guide.json
