[project]
name = "solar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.2",
    "ephem>=4.2.1",
    "fastapi>=0.138.0",
    "lark-oapi>=1.6.9",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "uvicorn>=0.49.0",
]
